# cryptopals

./: .clang-format  1.1_HexToBase64.c  1.3_SingleByteXorCipher.c  1.4_DetectSingleCharXor.c  1.5_RepeatingKeyXor.c  1.6_BreakRepeatingKeyXor.c  1.6_Notes.txt  1.7_AesInEcbMode.c  2.2_CbcMode.c  2.4_ByteEcbDecryption.c  2.5_EcbCutPaste.c  2.6_HardByteEcbDecryption.c  README.md  aes_ciphers.h  core_functions.c  core_functions.h
cryptopals/: 1.2_FixedXor.c  1.8_DetectEcbMode.c  2.1_PkcsPadding.c  2.3_EcbCbcOracle.c  2.3_Plaintext.txt  2.7_PkcsPaddingValidation.c  2.8_CbcBitflipping.c  CMakeLists.txt  aes_ciphers.c
